fix thumbnail spacing and click

--- a/src/styles/homepage/Thumbnail.css
+++ b/src/styles/homepage/Thumbnail.css
@@ -4,7 +4,7 @@
   text-wrap: wrap;
   align-items: start;
   justify-content: center;
-  width: 200px;
+  width: 250px;
   height: 100%;
   padding: 20px;
   font-size: 14px;
@@ -13,7 +13,7 @@
 }
 
 .thumbnail img {
-  height: 200px;
-  width: 200px;
+  height: 250px;
+  width: 250px;
   cursor: pointer;
 }
