--- a/src/styles/requests/Requests.css
+++ b/src/styles/requests/Requests.css
@@ -21,10 +21,8 @@ body, html {
 }
 
 .requests-grid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   width: 100%;
   box-sizing: border-box;
 }
